// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReportFilter component - ContentItems should render the no hub state for the repository picker 1`] = `
<div>
  <div
    class="svelte-1k192f9"
    data-testid="overlay"
    style="z-index: 2"
  />
   
  <section
    class="svelte-1qh5yjz"
  >
    <div
      class="report-filter svelte-1qh5yjz"
    >
      <div
        class="filter-selector svelte-1qh5yjz"
        data-testid="display-modal-button"
      >
        <div
          class="icon-wrapper  svelte-1qh5yjz"
        >
          <div
            class=" svelte-zpbvvv"
            style="--icon-width: 20px; --icon-height: 20px;"
          >
            <object
              src="ic-filter.svg/"
            />
          </div>
        </div>
         
        <div>
          No filters applied
        </div>
      </div>
       
      <div
        class="filter-chips svelte-1qh5yjz"
      />
    </div>
     
    <div
      class="modal-popup svelte-1qh5yjz"
      style="top: NaNpx;left: undefinedpx"
    >
      <article
        class="svelte-pntwh0"
      >
         
        <section
          class="widget-header svelte-1kld2ef"
        >
          <div
            class="title svelte-1kld2ef"
          >
             
             
            <div
              slot="title"
            >
              <h3>
                Filter by
              </h3>
               
              <div
                class="
    mdc-form-field
    
    
  "
              >
                <div
                  class="mdc-radio"
                >
                  <input
                    class="mdc-radio__native-control "
                    id="SMUI-form-field-10"
                    type="radio"
                    value="Edition"
                  />
                   
                  <div
                    class="mdc-radio__background"
                  >
                    <div
                      class="mdc-radio__outer-circle"
                    />
                     
                    <div
                      class="mdc-radio__inner-circle"
                    />
                  </div>
                </div>
                 
                 
                <label
                  for="SMUI-form-field-10"
                >
                  <span
                    class="svelte-1qh5yjz"
                    slot="label"
                  >
                    Edition
                  </span>
                </label>
              </div>
               
              <div
                class="
    mdc-form-field
    
    
  "
              >
                <div
                  class="mdc-radio"
                  data-testid="content-radio"
                >
                  <input
                    class="mdc-radio__native-control "
                    id="SMUI-form-field-11"
                    type="radio"
                    value="Content"
                  />
                   
                  <div
                    class="mdc-radio__background"
                  >
                    <div
                      class="mdc-radio__outer-circle"
                    />
                     
                    <div
                      class="mdc-radio__inner-circle"
                    />
                  </div>
                </div>
                 
                 
                <label
                  for="SMUI-form-field-11"
                >
                  <span
                    class="svelte-1qh5yjz"
                    slot="label"
                  >
                    Content
                  </span>
                </label>
              </div>
            </div>
          </div>
           
          <div
            class="actions svelte-1kld2ef"
          >
            <div
              slot="actions"
            >
              <button
                class=" svelte-th9g9"
                data-testid="button"
              >
                Cancel
              </button>
               
              <button
                class="primary svelte-th9g9"
                data-testid="button"
                disabled=""
              >
                Apply
              </button>
            </div>
          </div>
        </section>
         
        <section
          class="widget-body svelte-4p1s5s"
        >
          <div
            class="container svelte-4axnnt"
          >
            <div>
              <h3
                class="svelte-4axnnt"
              >
                Unable to load editions
              </h3>
            </div>
          </div>
          
        </section>
      </article>
    </div>
  </section>
</div>
`;

exports[`ReportFilter component - Editions should render initial state when a selectedEdition has been removed 1`] = `
<div>
  <div
    class="svelte-1k192f9"
    data-testid="overlay"
    style="z-index: 2"
  />
   
  <section
    class="svelte-1qh5yjz"
  >
    <div
      class="report-filter svelte-1qh5yjz"
    >
      <div
        class="filter-selector svelte-1qh5yjz"
        data-testid="display-modal-button"
      >
        <div
          class="icon-wrapper  svelte-1qh5yjz"
        >
          <div
            class=" svelte-zpbvvv"
            style="--icon-width: 20px; --icon-height: 20px;"
          >
            <object
              src="ic-filter.svg/"
            />
          </div>
        </div>
         
        <div>
          No filters applied
        </div>
      </div>
       
      <div
        class="filter-chips svelte-1qh5yjz"
      />
    </div>
     
    <div
      class="modal-popup svelte-1qh5yjz"
      style="top: NaNpx;left: undefinedpx"
    >
      <article
        class="svelte-pntwh0"
      >
         
        <section
          class="widget-header svelte-1kld2ef"
        >
          <div
            class="title svelte-1kld2ef"
          >
             
             
            <div
              slot="title"
            >
              <h3>
                Filter by
              </h3>
               
              <div
                class="
    mdc-form-field
    
    
  "
              >
                <div
                  class="mdc-radio"
                >
                  <input
                    class="mdc-radio__native-control "
                    id="SMUI-form-field-8"
                    type="radio"
                    value="Edition"
                  />
                   
                  <div
                    class="mdc-radio__background"
                  >
                    <div
                      class="mdc-radio__outer-circle"
                    />
                     
                    <div
                      class="mdc-radio__inner-circle"
                    />
                  </div>
                </div>
                 
                 
                <label
                  for="SMUI-form-field-8"
                >
                  <span
                    class="svelte-1qh5yjz"
                    slot="label"
                  >
                    Edition
                  </span>
                </label>
              </div>
               
              <div
                class="
    mdc-form-field
    
    
  "
              >
                <div
                  class="mdc-radio"
                  data-testid="content-radio"
                >
                  <input
                    class="mdc-radio__native-control "
                    id="SMUI-form-field-9"
                    type="radio"
                    value="Content"
                  />
                   
                  <div
                    class="mdc-radio__background"
                  >
                    <div
                      class="mdc-radio__outer-circle"
                    />
                     
                    <div
                      class="mdc-radio__inner-circle"
                    />
                  </div>
                </div>
                 
                 
                <label
                  for="SMUI-form-field-9"
                >
                  <span
                    class="svelte-1qh5yjz"
                    slot="label"
                  >
                    Content
                  </span>
                </label>
              </div>
            </div>
          </div>
           
          <div
            class="actions svelte-1kld2ef"
          >
            <div
              slot="actions"
            >
              <button
                class=" svelte-th9g9"
                data-testid="button"
              >
                Cancel
              </button>
               
              <button
                class="primary svelte-th9g9"
                data-testid="button"
                disabled=""
              >
                Apply
              </button>
            </div>
          </div>
        </section>
         
        <section
          class="widget-body svelte-4p1s5s"
        >
          <div
            class="container svelte-4axnnt"
          >
            <div>
              <h3
                class="svelte-4axnnt"
              >
                Unable to load editions
              </h3>
            </div>
          </div>
          
        </section>
      </article>
    </div>
  </section>
</div>
`;

exports[`ReportFilter component - Editions should render the ReportFilter component no selectedEdition 1`] = `
<div>
   
  <section
    class="svelte-1qh5yjz"
  >
    <div
      class="report-filter svelte-1qh5yjz"
    >
      <div
        class="filter-selector svelte-1qh5yjz"
        data-testid="display-modal-button"
      >
        <div
          class="icon-wrapper  svelte-1qh5yjz"
        >
          <div
            class=" svelte-zpbvvv"
            style="--icon-width: 20px; --icon-height: 20px;"
          >
            <object
              src="ic-filter.svg/"
            />
          </div>
        </div>
         
        <div>
          No filters applied
        </div>
      </div>
       
      <div
        class="filter-chips svelte-1qh5yjz"
      />
    </div>
     
  </section>
</div>
`;

exports[`ReportFilter component - Editions should render the ReportFilter component with a selectedEdition 1`] = `
<div>
   
  <section
    class="svelte-1qh5yjz"
  >
    <div
      class="report-filter svelte-1qh5yjz"
    >
      <div
        class="filter-selector svelte-1qh5yjz"
        data-testid="display-modal-button"
      >
        <div
          class="icon-wrapper active  svelte-1qh5yjz"
        >
          <div
            class=" svelte-zpbvvv"
            style="--icon-width: 20px; --icon-height: 20px;"
          >
            <object
              src="ic-filter.svg/"
            />
          </div>
        </div>
         
        <div>
          Edition
        </div>
      </div>
       
      <div
        class="filter-chips svelte-1qh5yjz"
      >
        <div
          class="clickable svelte-197mspp"
          data-testid="chip"
        >
          <span
            class="label svelte-197mspp"
          >
            Test Event / Test Edition
          </span>
           
          <span
            class="cross svelte-197mspp"
            data-testid="remove-chip-button"
          >
            <div
              class=" svelte-zpbvvv"
              style="--icon-width: 12px; --icon-height: 12px;"
            >
              <object
                src="ic-delete.svg/"
              />
            </div>
          </span>
        </div>
        
      </div>
    </div>
     
  </section>
</div>
`;
